src/test/resources/tags/importtag/errors/import-macro.jinja
{% import "tags/importtag/errors/macro-with-error.jinja" %}

{{ doSomething() }}
